Updated page TechDraw Annotation/de

--- a/wiki/de/TechDraw_Annotation.html
+++ b/wiki/de/TechDraw_Annotation.html
@@ -86,15 +86,13 @@
 <p>Die Beschriftung &uuml;bernimmt alle anwendbaren grundlegenden Eigenschaften der Ansicht au&szlig;er <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Scale</b> (Ma&szlig;stab). Stattdessen wird die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Size</b> (Schrifth&ouml;he) verwendet.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text</b>: Der anzuzeigende Text.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Font</b>: Der Name der zu verwendenden Schriftart. F&uuml;r Beschriftungen wird die beste &Uuml;bereinstimmung der installierten Schriftarten verwenden.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Color</b>: Die Farbe des Textes.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Size</b>: Die Schrifth&ouml;he.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Max Width</b>: Die maximale Breite des Beschriftungsblocks. -1 gibt keine maximale Breite an.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>LineSpace</b>: Einstellung des Zeilenabstands (%).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Line Space</b>: Einstellung des Zeilenabstands (%).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Style</b>: "Normal", "Bold", "Italic", "Bold-Italic" (normal, fett, kursiv, fett-kursiv)</li></ul>
-</div>
 <p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
@@ -153,15 +151,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222747
+Cached time: 20260111222821
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.200 seconds
-Preprocessor visited node count: 632/1000000
-Post&#8208;expand include size: 31178/2097152 bytes
-Template argument size: 11839/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 631/1000000
+Post&#8208;expand include size: 31180/2097152 bytes
+Template argument size: 11841/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -169,19 +167,19 @@ Unstrip post&#8208;expand size: 2655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.062      1 -total
- 32.92%   21.419      1 Template:TechDraw_Tools_navi/de
- 22.69%   14.763      2 Template:Navigation_menu_2
- 14.44%    9.395      1 Template:GuiCommand/de
- 10.50%    6.830      9 Template:PropertyData/de
-  9.26%    6.023      2 Template:Caption
-  7.24%    4.710      1 Template:Userdocnavi/de
-  6.87%    4.467      2 Template:Docnav/de
-  4.37%    2.841      1 Template:Code
-  4.15%    2.702      9 Template:Variable
+100.00%   40.391      1 -total
+ 25.81%   10.424      1 Template:TechDraw_Tools_navi/de
+ 15.04%    6.075      9 Template:PropertyData/de
+ 13.04%    5.265      2 Template:Navigation_menu_2
+  9.78%    3.950      1 Template:GuiCommand/de
+  8.76%    3.540      9 Template:Variable
+  8.24%    3.327      2 Template:Docnav/de
+  7.21%    2.913      2 Template:Caption
+  6.91%    2.789      1 Template:Code
+  5.79%    2.339      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222747 and revision id 1736643. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222820 and revision id 1736645. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
