Updated page TechDraw Annotation/de

--- a/wiki/de/TechDraw_Annotation.html
+++ b/wiki/de/TechDraw_Annotation.html
@@ -148,12 +148,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222846
+Cached time: 20260111222854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.115 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 630/1000000
 Post&#8208;expand include size: 31180/2097152 bytes
 Template argument size: 11841/2097152 bytes
@@ -164,19 +164,19 @@ Unstrip post&#8208;expand size: 2655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.482      1 -total
- 27.69%    7.333      9 Template:PropertyData/de
- 23.73%    6.284      1 Template:TechDraw_Tools_navi/de
- 11.43%    3.027      2 Template:Navigation_menu_2
-  9.18%    2.431      9 Template:Variable
-  8.45%    2.239      1 Template:GuiCommand/de
-  7.30%    1.933      2 Template:Docnav/de
-  5.65%    1.496      1 Template:Code
-  5.08%    1.345      6 Template:Incode
-  5.07%    1.343      1 Template:Userdocnavi/de
+100.00%   32.278      1 -total
+ 19.41%    6.266      2 Template:Docnav/de
+ 17.49%    5.645      1 Template:TechDraw_Tools_navi/de
+ 13.98%    4.511      9 Template:PropertyData/de
+ 11.98%    3.867      1 Template:Userdocnavi/de
+ 11.09%    3.579      2 Template:Navigation_menu_2
+  9.02%    2.910      1 Template:GuiCommand/de
+  8.05%    2.600      9 Template:Variable
+  6.00%    1.936      1 Template:Code
+  5.00%    1.613      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222846 and revision id 1736647. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222854 and revision id 1736647. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
