--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -100,7 +100,7 @@ App::PropertyVector
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<p>See <a href="../FeaturePython_Custom_Properties.html" title="FeaturePython Custom Properties">FeaturePython Custom Properties</a>.
+<p>Viz <a href="../index.php?title=FeaturePython_Custom_Properties/cs&amp;action=edit&amp;redlink=1.html" class="new" title="FeaturePython Custom Properties/cs (page does not exist)">FeaturePython U&#382;ivatelsk&eacute; vlastnosti</a>.
 </p>
 <h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
 <p>See <a href="../Combo_view.html#Preferences" class="mw-redirect" title="Combo view">Combo view</a>.
@@ -172,12 +172,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222659
+Cached time: 20260111222902
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.232 seconds
+CPU time usage: 0.141 seconds
+Real time usage: 0.268 seconds
 Preprocessor visited node count: 705/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -188,19 +188,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.254      1 -total
- 28.57%   22.645      1 Template:Std_Base_navi/cs
- 12.70%   10.067      1 Template:Userdocnavi/cs
- 12.37%    9.805      3 Template:Navigation_menu_2
- 12.13%    9.616      1 Template:Interface_navi/cs
-  9.37%    7.430      2 Template:Docnav
-  4.74%    3.759      2 Template:Value
-  4.41%    3.499     26 Template:MenuCommand
-  4.37%    3.465      1 Template:PropertyData
-  3.24%    2.568      1 Template:Code
+100.00%   52.693      1 -total
+ 23.33%   12.295      1 Template:Std_Base_navi/cs
+ 17.86%    9.413      1 Template:Interface_navi/cs
+ 15.13%    7.972      3 Template:Navigation_menu_2
+ 12.25%    6.457      1 Template:Userdocnavi/cs
+  6.65%    3.504      1 Template:PropertyData
+  4.97%    2.621      6 Template:Incode
+  4.50%    2.369      1 Template:TRUE
+  4.42%    2.327      2 Template:Value
+  4.13%    2.177     26 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222659 and revision id 1736639. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222902 and revision id 1736649. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
