Created page with "== Předvolby =="

--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -101,8 +101,9 @@ App::PropertyVector
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
 <p>Viz <a href="../index.php?title=FeaturePython_Custom_Properties/cs&amp;action=edit&amp;redlink=1.html" class="new" title="FeaturePython Custom Properties/cs (page does not exist)">FeaturePython U&#382;ivatelsk&eacute; vlastnosti</a>.
+</p><p><span id="Preferences"></span>
 </p>
-<h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
+<h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <p>See <a href="../Combo_view.html#Preferences" class="mw-redirect" title="Combo view">Combo view</a>.
 </p><p><br>
 </p>
@@ -172,13 +173,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222902
+Cached time: 20260111222934
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.268 seconds
-Preprocessor visited node count: 705/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
 Highest expansion depth: 7/100
@@ -188,19 +189,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.693      1 -total
- 23.33%   12.295      1 Template:Std_Base_navi/cs
- 17.86%    9.413      1 Template:Interface_navi/cs
- 15.13%    7.972      3 Template:Navigation_menu_2
- 12.25%    6.457      1 Template:Userdocnavi/cs
-  6.65%    3.504      1 Template:PropertyData
-  4.97%    2.621      6 Template:Incode
-  4.50%    2.369      1 Template:TRUE
-  4.42%    2.327      2 Template:Value
-  4.13%    2.177     26 Template:MenuCommand
+100.00%   38.267      1 -total
+ 26.70%   10.216      1 Template:Std_Base_navi/cs
+ 17.30%    6.620      3 Template:Navigation_menu_2
+ 14.44%    5.524      1 Template:Userdocnavi/cs
+ 12.78%    4.890      1 Template:Interface_navi/cs
+  6.75%    2.582      1 Template:PropertyData
+  6.26%    2.396      2 Template:Value
+  4.66%    1.785      2 Template:Docnav
+  4.04%    1.544     26 Template:MenuCommand
+  3.89%    1.487      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222902 and revision id 1736649. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222934 and revision id 1736651. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
