--- a/wiki/de/TechDraw_ComplexSection.html
+++ b/wiki/de/TechDraw_ComplexSection.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_ComplexSection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ComplexSection (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Vue en coupe complexe (70% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Sezione complessa (70% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw przekr&oacute;j z&#322;o&#380;ony (70% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw przekr&oacute;j z&#322;o&#380;ony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#48373;&#54633;&#45800;&#47732; (35% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansicht</a></div>
@@ -12,7 +12,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; TechDraw Ansichten &rarr; Komplexe Schnittansicht einf&uuml;gen
+<td class="ctEven">TechDraw &rarr; TechDraw-Ansichten &rarr; Komplexe Schnittansicht
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -186,35 +184,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110171015
+Cached time: 20260111222945
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.294 seconds
-Preprocessor visited node count: 470/1000000
-Post&#8208;expand include size: 29928/2097152 bytes
-Template argument size: 11817/2097152 bytes
+CPU time usage: 0.113 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 469/1000000
+Post&#8208;expand include size: 29908/2097152 bytes
+Template argument size: 11797/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4378/5000000 bytes
+Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.040      1 -total
- 18.02%   13.706      1 Template:Userdocnavi/de
- 14.81%   11.260      1 Template:TechDraw_Tools_navi/de
- 14.07%   10.699      2 Template:PropertyData/de
- 11.03%    8.387      1 Template:GuiCommand/de
-  9.96%    7.575      1 Template:Code
-  9.78%    7.440      2 Template:Navigation_menu_2
-  8.35%    6.350      2 Template:Docnav/de
-  7.08%    5.382      2 Template:Variable
-  5.59%    4.250      1 Template:TitleProperty
+100.00%   45.485      1 -total
+ 20.10%    9.141      1 Template:TitleProperty
+ 17.40%    7.913      1 Template:TechDraw_Tools_navi/de
+ 11.18%    5.083      2 Template:PropertyData/de
+  8.66%    3.940      2 Template:Navigation_menu_2
+  7.77%    3.534      1 Template:Userdocnavi/de
+  6.89%    3.134      3 Template:Value
+  6.72%    3.056      2 Template:Docnav/de
+  6.43%    2.926      1 Template:GuiCommand/de
+  4.77%    2.168      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260110171015 and revision id 1731342. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111222945 and revision id 1736653. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
