--- a/wiki/de/TechDraw_ComplexSection.html
+++ b/wiki/de/TechDraw_ComplexSection.html
@@ -54,11 +54,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug <b>TechDraw KomplexerSchnitt</b> f&uuml;gt einem Zeichnungsblatt eine Schnittansicht hinzu, die auf einer vorhandenen Bauteilansicht und einem Schnittprofil (Schnittkontur) basiert.
-</p>
-</div> 
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_QuarterSection_example.png&amp;filetimestamp=20221216102804&amp;.html" class="mw-file-description"><img src="../File/TechDraw_QuarterSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
+<p>Das Werkzeug <b>TechDraw KomplexerSchnitt</b> f&uuml;gt einem Zeichnungsblatt eine Schnittansicht hinzu, die auf einer vorhandenen Bauteilansicht und einem Schnittprofil (Schnittkontur) basiert. 
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_QuarterSection_example.png&amp;filetimestamp=20221216102804&amp;.html" class="mw-file-description"><img src="../File/TechDraw_QuarterSection_example.png" decoding="async" width="350" height="215" class="mw-file-element" data-file-width="650" data-file-height="400"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Halbschnitt, mit dem Werkzeug Komplexe Schnittansicht erstellt</p>
@@ -184,13 +181,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222945
+Cached time: 20260111223025
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.180 seconds
-Preprocessor visited node count: 469/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 29908/2097152 bytes
 Template argument size: 11797/2097152 bytes
 Highest expansion depth: 8/100
@@ -200,19 +197,19 @@ Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.485      1 -total
- 20.10%    9.141      1 Template:TitleProperty
- 17.40%    7.913      1 Template:TechDraw_Tools_navi/de
- 11.18%    5.083      2 Template:PropertyData/de
-  8.66%    3.940      2 Template:Navigation_menu_2
-  7.77%    3.534      1 Template:Userdocnavi/de
-  6.89%    3.134      3 Template:Value
-  6.72%    3.056      2 Template:Docnav/de
-  6.43%    2.926      1 Template:GuiCommand/de
-  4.77%    2.168      1 Template:Code
+100.00%   35.178      1 -total
+ 17.09%    6.013      1 Template:TechDraw_Tools_navi/de
+ 12.17%    4.280      2 Template:PropertyData/de
+ 10.69%    3.760      1 Template:TitleProperty
+  9.91%    3.486      2 Template:Navigation_menu_2
+  9.42%    3.313      1 Template:Userdocnavi/de
+  8.29%    2.916      2 Template:Docnav/de
+  8.28%    2.912      1 Template:GuiCommand/de
+  6.22%    2.189      3 Template:Value
+  6.01%    2.113      3 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111222945 and revision id 1736653. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223025 and revision id 1736655. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
