--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -104,7 +104,7 @@ App::PropertyVector
 </p><p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
-<p>See <a href="../Combo_view.html#Preferences" class="mw-redirect" title="Combo view">Combo view</a>.
+<p>Viz <a href="../Combo_view.html#Preferences" class="mw-redirect" title="Combo view">Kombinovan&eacute; zobrazen&iacute;</a>.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222934
+Cached time: 20260111223040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.185 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.267      1 -total
- 26.70%   10.216      1 Template:Std_Base_navi/cs
- 17.30%    6.620      3 Template:Navigation_menu_2
- 14.44%    5.524      1 Template:Userdocnavi/cs
- 12.78%    4.890      1 Template:Interface_navi/cs
-  6.75%    2.582      1 Template:PropertyData
-  6.26%    2.396      2 Template:Value
-  4.66%    1.785      2 Template:Docnav
-  4.04%    1.544     26 Template:MenuCommand
-  3.89%    1.487      1 Template:Code
+100.00%   51.536      1 -total
+ 23.19%   11.949      1 Template:Interface_navi/cs
+ 18.18%    9.368      1 Template:Std_Base_navi/cs
+ 13.98%    7.203      3 Template:Navigation_menu_2
+  8.86%    4.564      1 Template:Userdocnavi/cs
+  7.44%    3.832      1 Template:PropertyData
+  6.70%    3.452     26 Template:MenuCommand
+  6.21%    3.198      1 Template:TOCright
+  4.41%    2.273      2 Template:Docnav
+  4.12%    2.122      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111222934 and revision id 1736651. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111223040 and revision id 1736657. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
