--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -500,9 +500,7 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </p><p>- im Forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=7384&amp;p=87642#p87642">Extrude from curved surface of cylinder</a>
 </p><p><span id="Examples"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Beispiel">Beispiel</span></h2>
-</div>
+<h2><span class="mw-headline" id="Beispiele">Beispiele</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -988,13 +986,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213514
+Cached time: 20260111223210
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.466 seconds
-Real time usage: 0.659 seconds
-Preprocessor visited node count: 1602/1000000
+CPU time usage: 0.408 seconds
+Real time usage: 0.658 seconds
+Preprocessor visited node count: 1601/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1004,19 +1002,19 @@ Unstrip post&#8208;expand size: 66468/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  402.931      1 -total
-  4.59%   18.492      1 Template:Draft_Tools_navi/de
-  2.07%    8.355      2 Template:Navigation_menu_2
-  1.87%    7.527     10 Template:Code
-  1.60%    6.452     10 Template:CheckBox
-  1.29%    5.206      1 Template:Macro/de
-  1.28%    5.172      1 Template:Userdocnavi/de
-  1.23%    4.951     22 Template:Button
-  1.21%    4.889     14 Template:Incode
-  1.16%    4.692      1 Template:Caption
+100.00%  421.977      1 -total
+  2.70%   11.375      1 Template:Draft_Tools_navi/de
+  2.41%   10.164      1 Template:Codeextralink
+  1.49%    6.295      3 Template:ColoredText
+  1.37%    5.785      7 Template:RadioButton
+  1.28%    5.389      1 Template:Macro/de
+  1.15%    4.837     10 Template:Code
+  1.05%    4.438      2 Template:Navigation_menu_2
+  1.01%    4.276     14 Template:TRUE
+  0.87%    3.665      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260111213513 and revision id 1736506. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260111223209 and revision id 1736663. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
