--- a/wiki/de/TechDraw_ComplexSection.html
+++ b/wiki/de/TechDraw_ComplexSection.html
@@ -63,9 +63,7 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mit diesem Werkzeug erstellte ausgerichtete Schnittansicht</p>
 <p><span typeof="mw:File"><a href="../index.php?title=TechDraw_OffsetSection_example.png&amp;filetimestamp=20221216102740&amp;.html" class="mw-file-description"><img src="../File/TechDraw_OffsetSection_example.png" decoding="async" width="350" height="298" class="mw-file-element" data-file-width="470" data-file-height="400"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Abgesetzter Schnitt, mit dem Werkzeug Komplexe Schnittansicht erstellt</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mit diesem Werkzeug erstellte abgesetzte Schnittansicht</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -177,15 +175,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223158
+Cached time: 20260111223247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 466/1000000
-Post&#8208;expand include size: 29844/2097152 bytes
-Template argument size: 11765/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.205 seconds
+Preprocessor visited node count: 465/1000000
+Post&#8208;expand include size: 29814/2097152 bytes
+Template argument size: 11750/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -193,19 +191,19 @@ Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.094      1 -total
- 24.96%   14.752      1 Template:TechDraw_Tools_navi/de
- 13.26%    7.834      2 Template:Navigation_menu_2
- 13.21%    7.807      2 Template:PropertyData/de
-  8.79%    5.192      1 Template:Button
-  7.92%    4.678      1 Template:GuiCommand/de
-  7.91%    4.677      1 Template:MenuCommand
-  7.32%    4.325      1 Template:Userdocnavi/de
-  6.40%    3.780      2 Template:Variable
-  5.51%    3.256      1 Template:TitleProperty
+100.00%   49.387      1 -total
+ 18.78%    9.274      1 Template:TechDraw_Tools_navi/de
+ 12.94%    6.391      2 Template:PropertyData/de
+ 10.85%    5.360      1 Template:Userdocnavi/de
+  8.87%    4.380      1 Template:TitleProperty
+  8.65%    4.273      2 Template:Navigation_menu_2
+  8.30%    4.100      3 Template:Caption
+  6.86%    3.387      1 Template:Code
+  6.02%    2.973      1 Template:MenuCommand
+  5.75%    2.838      3 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223158 and revision id 1736661. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223247 and revision id 1736665. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
