Updated page TechDraw ComplexSection/de

--- a/wiki/de/TechDraw_ComplexSection.html
+++ b/wiki/de/TechDraw_ComplexSection.html
@@ -77,7 +77,7 @@
 </p><p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
-<p>Eine komplexe Schnittansicht, formal ein <code>TechDraw::DrawComplexSection</code>-Objekt, wird von einer <a href="../de/TechDraw_SectionView.html#Eigenschaften" title="TechDraw SectionView/de">Schnittansicht</a>, formal ein <code>TechDraw::DrawViewSection</code>-Objekt abgeleitet und erbt alle seine Eigenschaften. Es besitzt au&szlig;erdem die folgenden Eigenschaften:
+<p>Eine komplexe Schnittansicht, formal ein <code>TechDraw::DrawComplexSection</code>-Objekt, wird von einer <a href="../de/TechDraw_SectionView.html#Properties" title="TechDraw SectionView/de">Schnittansicht</a>, formal ein <code>TechDraw::DrawViewSection</code>-Objekt abgeleitet und erbt alle seine Eigenschaften. Es besitzt au&szlig;erdem die folgenden Eigenschaften:
 </p><p><span id="Data"></span>
 </p>
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
@@ -173,12 +173,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223533
+Cached time: 20260111223552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.200 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.152 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 29804/2097152 bytes
 Template argument size: 11740/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 4383/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.108      1 -total
- 18.26%    8.420      1 Template:TitleProperty
- 16.51%    7.612      2 Template:PropertyData/de
- 11.04%    5.088      1 Template:TechDraw_Tools_navi/de
-  7.34%    3.384      1 Template:Userdocnavi/de
-  7.15%    3.295      1 Template:GuiCommand/de
-  6.61%    3.048      1 Template:Code
-  6.59%    3.039      2 Template:Navigation_menu_2
-  6.35%    2.930      2 Template:Docnav/de
-  5.67%    2.612      3 Template:Caption
+100.00%   39.848      1 -total
+ 23.74%    9.458      1 Template:TechDraw_Tools_navi/de
+ 13.06%    5.204      2 Template:Navigation_menu_2
+ 10.42%    4.152      2 Template:PropertyData/de
+ 10.17%    4.051      1 Template:TitleProperty
+  8.45%    3.367      1 Template:Userdocnavi/de
+  7.33%    2.922      1 Template:Code
+  6.86%    2.733      2 Template:Docnav/de
+  6.61%    2.633      3 Template:Value
+  5.79%    2.307      2 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223532 and revision id 1736667. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223552 and revision id 1736669. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
