--- a/wiki/de/TechDraw_ComplexSection.html
+++ b/wiki/de/TechDraw_ComplexSection.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ComplexSection/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ComplexSection&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_ComplexSection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ComplexSection (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Vue en coupe complexe (70% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_ComplexSection.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Sezione complessa (70% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -97,11 +97,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Eine komplexe Schnittansicht kann mit <a href="../de/Macros.html" title="Macros/de">Makros</a> und &uuml;ber die <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> mit den folgenden Funktionen erstellt werden:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Eine komplexe Schnittansicht kann mit <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus mit den folgenden Funktionen erstellt werden:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">doc</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span>
 <span class="n">box</span> <span class="o">=</span> <span class="n">doc</span><span class="o">.</span><span class="n">Box</span>
 <span class="n">profile</span> <span class="o">=</span> <span class="n">doc</span><span class="o">.</span><span class="n">Sketch</span>
@@ -173,35 +170,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223552
+Cached time: 20260111223635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.152 seconds
-Preprocessor visited node count: 464/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.355 seconds
+Preprocessor visited node count: 463/1000000
 Post&#8208;expand include size: 29804/2097152 bytes
 Template argument size: 11740/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4383/5000000 bytes
+Unstrip post&#8208;expand size: 4387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.848      1 -total
- 23.74%    9.458      1 Template:TechDraw_Tools_navi/de
- 13.06%    5.204      2 Template:Navigation_menu_2
- 10.42%    4.152      2 Template:PropertyData/de
- 10.17%    4.051      1 Template:TitleProperty
-  8.45%    3.367      1 Template:Userdocnavi/de
-  7.33%    2.922      1 Template:Code
-  6.86%    2.733      2 Template:Docnav/de
-  6.61%    2.633      3 Template:Value
-  5.79%    2.307      2 Template:Variable
+100.00%  115.513      1 -total
+ 17.69%   20.431      1 Template:TitleProperty
+ 16.13%   18.634      2 Template:PropertyData/de
+ 15.42%   17.807      3 Template:Value
+ 12.19%   14.084      3 Template:Caption
+ 11.91%   13.755      2 Template:Variable
+  9.09%   10.498      1 Template:GuiCommand/de
+  7.68%    8.877      1 Template:TechDraw_Tools_navi/de
+  4.91%    5.673      1 Template:Button
+  4.68%    5.411      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223552 and revision id 1736669. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302166-0!canonical and timestamp 20260111223635 and revision id 1736671. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
