Created page with "Die folgenden internen Arbeitsbereichs-Typen sind verfügbar:"

--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -185,7 +185,7 @@
 <li>type="automatic|addon|internal|python": Optional, Standardwert ist "automatic". Gibt an, worauf sich diese Abh&auml;ngigkeitsangabe bezieht. "addon" steht f&uuml;r externe Addons, "internal" f&uuml;r interne Arbeitsbereiche (z. B. "arch", "sketcher" usw.) und "python" f&uuml;r eine Python-Paketabh&auml;ngigkeit. Versionen von FreeCAD vor 0.21 verwenden dieses Attribut nicht, und es wird immer "automatic" angenommen.</li></ul>
 </div>
 <h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
-<p>The following internal workbench types are available:
+<p>Die folgenden internen Arbeitsbereichs-Typen sind verf&uuml;gbar:
 </p>
 <ul><li><code>assembly</code></li>
 <li><code>bim</code></li>
@@ -375,12 +375,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213159
+Cached time: 20260111223802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 523/1000000
 Post&#8208;expand include size: 7649/2097152 bytes
 Template argument size: 2699/2097152 bytes
@@ -391,18 +391,18 @@ Unstrip post&#8208;expand size: 8142/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.522      1 -total
- 18.86%    9.907      1 Template:Powerdocnavi/de
- 17.61%    9.250      1 Template:TOCright
- 16.24%    8.529      3 Template:Version/de
- 12.24%    6.429      1 Template:Code
- 10.01%    5.259      1 Template:MenuCommand
-  8.74%    4.588      2 Template:VersionNote/de
-  8.68%    4.561     37 Template:Incode
-  6.48%    3.402      1 Template:Navigation_menu_2
+100.00%   22.770      1 -total
+ 24.19%    5.509      1 Template:Powerdocnavi/de
+ 17.92%    4.081      2 Template:VersionNote/de
+ 13.23%    3.012     37 Template:Incode
+ 10.44%    2.377      3 Template:Version/de
+ 10.40%    2.368      1 Template:Navigation_menu_2
+  7.76%    1.767      1 Template:Code
+  7.11%    1.619      1 Template:MenuCommand
+  6.99%    1.592      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111213159 and revision id 1736494. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111223802 and revision id 1736673. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
