--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -184,7 +184,9 @@
 <li>optional="true|false": Wenn "optional" auf "true" gesetzt ist, wird die Abh&auml;ngigkeit als optional behandelt, wenn das Addon mit dem Addon-Manager installiert wird. Im Allgemeinen bedeutet dies, dass eine fehlgeschlagene Installation der Abh&auml;ngigkeit die Installation des Addons nicht verhindert und der Benutzer m&ouml;glicherweise gefragt wird, ob er es installieren m&ouml;chte. Versionen von FreeCAD vor 0.21 erkennen dieses Attribut nicht und ignorieren es.</li>
 <li>type="automatic|addon|internal|python": Optional, Standardwert ist "automatic". Gibt an, worauf sich diese Abh&auml;ngigkeitsangabe bezieht. "addon" steht f&uuml;r externe Addons, "internal" f&uuml;r interne Arbeitsbereiche (z. B. "arch", "sketcher" usw.) und "python" f&uuml;r eine Python-Paketabh&auml;ngigkeit. Versionen von FreeCAD vor 0.21 verwenden dieses Attribut nicht, und es wird immer "automatic" angenommen.</li></ul>
 </div>
-<h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
+<p><span id="Type:_internal"></span>
+</p>
+<h5><span class="mw-headline" id="Typ:_intern">Typ: intern</span></h5>
 <p>Die folgenden internen Arbeitsbereichs-Typen sind verf&uuml;gbar:
 </p>
 <ul><li><code>assembly</code></li>
@@ -375,13 +377,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223802
+Cached time: 20260111223813
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.097 seconds
-Preprocessor visited node count: 523/1000000
+CPU time usage: 0.056 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 524/1000000
 Post&#8208;expand include size: 7649/2097152 bytes
 Template argument size: 2699/2097152 bytes
 Highest expansion depth: 5/100
@@ -391,18 +393,18 @@ Unstrip post&#8208;expand size: 8142/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.770      1 -total
- 24.19%    5.509      1 Template:Powerdocnavi/de
- 17.92%    4.081      2 Template:VersionNote/de
- 13.23%    3.012     37 Template:Incode
- 10.44%    2.377      3 Template:Version/de
- 10.40%    2.368      1 Template:Navigation_menu_2
-  7.76%    1.767      1 Template:Code
-  7.11%    1.619      1 Template:MenuCommand
-  6.99%    1.592      1 Template:TOCright
+100.00%   18.356      1 -total
+ 30.95%    5.682      1 Template:Powerdocnavi/de
+ 13.94%    2.558      1 Template:MenuCommand
+ 11.87%    2.179     37 Template:Incode
+  9.49%    1.742      1 Template:Navigation_menu_2
+  8.45%    1.551      1 Template:Code
+  8.26%    1.516      3 Template:Version/de
+  6.86%    1.259      2 Template:VersionNote/de
+  5.60%    1.029      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111223802 and revision id 1736673. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260111223813 and revision id 1736675. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
