--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -85,12 +85,11 @@
 </p><p>The <a href="../External_workbenches.html" title="External workbenches">external workbenches</a> page lists all that are known to this community. Most are easily installable from within FreeCAD, using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>, found under menu <b>Tools &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Addon manager</b>. 
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Property_editor.html" class="mw-redirect" title="Property editor/cs">Object properties</a></div>
-    <div><a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">Pracovn&iacute; plocha N&aacute;vrh D&iacute;lu</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Property_View.html" title="Property View/cs">Zobrazen&iacute; vlastnost&iacute;</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>
+ <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
@@ -108,15 +107,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223835
+Cached time: 20260111223858
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.263 seconds
-Preprocessor visited node count: 281/1000000
-Post&#8208;expand include size: 7993/2097152 bytes
-Template argument size: 2407/2097152 bytes
+CPU time usage: 0.098 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 286/1000000
+Post&#8208;expand include size: 7999/2097152 bytes
+Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -124,19 +123,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.272      1 -total
- 29.37%    9.772      1 Template:Userdocnavi/cs
- 14.83%    4.934      3 Template:Version
- 14.40%    4.791      1 Template:Docnav/cs
- 11.61%    3.862      1 Template:Navigation_menu_2
- 10.36%    3.448      1 Template:Docnav
-  9.81%    3.263      5 Template:Incode
-  7.51%    2.500      2 Template:VersionMinus
-  6.53%    2.171      1 Template:Button
-  3.75%    1.248      1 Template:MenuCommand
+100.00%   13.318      1 -total
+ 41.93%    5.584      1 Template:Userdocnavi/cs
+ 18.89%    2.516      1 Template:Navigation_menu_2
+ 13.34%    1.777      2 Template:Docnav
+  9.09%    1.211      1 Template:MenuCommand
+  8.27%    1.101      5 Template:Incode
+  7.60%    1.012      3 Template:Version
+  7.31%    0.973      1 Template:Button
+  6.84%    0.911      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111223835 and revision id 1736677. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111223858 and revision id 1736679. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
