Updated page FreeCAD and DWG Import/de

--- a/wiki/de/FreeCAD_and_DWG_Import.html
+++ b/wiki/de/FreeCAD_and_DWG_Import.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FreeCAD and DWG Import/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FreeCAD+and+DWG+Import&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../FreeCAD_and_DWG_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD and DWG Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="Importaci&oacute;n de FreeCAD y DWG (42% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD et l'importation DWG (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -72,10 +72,8 @@ Um diese Optionen zu sehen, besuchst du <a rel="nofollow" class="external text" 
 <ul><li>Homepage: <a rel="nofollow" class="external free" href="https://qcad.org/en/qcad-command-line-tools#dwg2dwg">https://qcad.org/en/qcad-command-line-tools#dwg2dwg</a></li>
 <li>Lizenz: kommerziell</li>
 <li>optional, dient zum Aktivieren des Imports und Exports von DWG-Dateien</li></ul>
-<div class="mw-translate-fuzzy">
-<p>QCAD ist eine bekannte Open-Source-Plattform f&uuml;r 2D-CAD auf DXF-Basis. Es gibt auch eine kostenpflichtige Pro-Version, die im Wesentlichen die Open-Source-Version mit zus&auml;tzlicher Unterst&uuml;tzung f&uuml;r das DWG-Format ist. Beim Kauf der Pro-Version enth&auml;lt QCAD auch ein Konvertierungsprogramm von DWG zu DXF, das von FreeCAD verwendet werden kann.
+<p>QCAD Community Edition ist eine bekannte Open-Source-Plattform f&uuml;r 2D-CAD auf DXF-Basis. Es gibt auch eine kostenpflichtige Pro-Version, die im Wesentlichen die Open-Source-Version mit zus&auml;tzlicher Unterst&uuml;tzung f&uuml;r das DWG-Format und Entwurfsfunktionen ist. Beim Kauf der Pro-Version enth&auml;lt QCAD auch ein Konvertierungsprogramm von DWG zu DXF, das von FreeCAD verwendet werden kann.
 </p>
-</div>
 <h4><span class="mw-headline" id="Installation">Installation</span></h4>
 <p>Wenn das Dienstprogramm nach der Installation (<span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span>) nicht automatisch von FreeCAD gefunden wird, muss man den Pfad zur Bash-Datei (Linux und macOS) oder zur Batch-Datei (Windows) manuell festlegen. Siehe <a href="../de/Import_Export_Preferences.html#DWG" title="Import Export Preferences/de">Import-/Export-Einstellungen</a>.
 </p><p><span id="CADExchanger_Workbench"></span>
@@ -149,34 +147,34 @@ Dieses Programm ist nur f&uuml;r Windows. Hinweis: Es scheint seit Jahren nicht 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210824
+Cached time: 20260111224134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 314/1000000
+CPU time usage: 0.065 seconds
+Real time usage: 0.093 seconds
+Preprocessor visited node count: 313/1000000
 Post&#8208;expand include size: 17102/2097152 bytes
 Template argument size: 6625/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3027/5000000 bytes
+Unstrip post&#8208;expand size: 3031/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.885      1 -total
- 40.86%   20.793      1 Template:Draft_Tools_navi/de
- 11.45%    5.828      2 Template:Navigation_menu_2
- 10.93%    5.561      1 Template:Userdocnavi/de
-  9.73%    4.952      3 Template:Incode
-  9.35%    4.758      5 Template:Version/de
-  8.99%    4.573      1 Template:Fake_heading
-  8.46%    4.303      2 Template:Code
-  2.74%    1.394      1 Template:TOCright
+100.00%   19.240      1 -total
+ 34.34%    6.608      1 Template:Draft_Tools_navi/de
+ 16.60%    3.193      2 Template:Navigation_menu_2
+ 12.43%    2.391      5 Template:Version/de
+ 11.91%    2.291      2 Template:Code
+ 11.45%    2.203      1 Template:Fake_heading
+  9.77%    1.880      1 Template:Userdocnavi/de
+  7.59%    1.461      1 Template:TOCright
+  7.01%    1.349      3 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60118-0!canonical and timestamp 20260111210824 and revision id 1736348. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60118-0!canonical and timestamp 20260111224134 and revision id 1736687. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
