Updated page Workbenches/cs

--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -32,11 +32,8 @@
 </div>
 <p>FreeCAD, stejn&#283; jako mnoho modern&iacute;ch n&aacute;vrhov&yacute;ch aplikac&iacute;, nap&#345;&iacute;klad <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CATIA">CATIA</a>, je zalo&#382;en na konceptu <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Workbench">Pracovn&iacute;ch ploch</a>. Pracovn&iacute; plochu lze pova&#382;ovat za sadu n&aacute;stroj&#367; speci&aacute;ln&#283; seskupen&yacute;ch pro ur&#269;it&yacute; &uacute;kol. V tradi&#269;n&iacute; truhl&aacute;&#345;sk&eacute; d&iacute;ln&#283; byste m&#283;li pracovn&iacute; st&#367;l pro osobu, kter&aacute; pracuje se d&#345;evem, dal&scaron;&iacute; pro osobu, kter&aacute; pracuje s kovov&yacute;mi d&iacute;ly a mo&#382;n&aacute; t&#345;et&iacute; pro osobu, kter&aacute; v&scaron;echny d&iacute;ly montuje dohromady.
 </p><p>Ve FreeCADu je pou&#382;it &uacute;pln&#283; stejn&yacute; koncept. N&aacute;stroje jsou p&#345;i&#345;azov&aacute;ny do pracovn&iacute;ch ploch podle &uacute;kol&#367;, ke kter&yacute;m, jsou tyto plochy ur&#269;eny.
+</p><p>P&#345;i p&#345;epnut&iacute; z jedn&eacute; pracovn&iacute; plochy na druhou se zm&#283;n&iacute; n&aacute;stroje dostupn&eacute; v rozhran&iacute;. Panely n&aacute;stroj&#367;, panely p&#345;&iacute;kaz&#367; a p&#345;&iacute;padn&#283; dal&scaron;&iacute; &#269;&aacute;sti rozhran&iacute; se p&#345;epnou na novou pracovn&iacute; plochu, ale obsah sc&eacute;ny se nezm&#283;n&iacute;. M&#367;&#382;ete nap&#345;&iacute;klad za&#269;&iacute;t kreslit 2D tvary v pracovn&iacute; plo&scaron;e Draft a pot&eacute; na nich d&aacute;le pracovat v pracovn&iacute; plo&scaron;e Part.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Kdy&#382; p&#345;epnete z jedn&eacute; plochy do druh&eacute;, n&aacute;stroje dostupn&eacute; v plo&scaron;e se zm&#283;n&iacute;. Pruh n&aacute;stroj&#367;, pruh p&#345;&iacute;kaz&#367; a p&#345;&iacute;padn&#283; dal&scaron;&iacute; &#269;&aacute;sti plochy se p&#345;epnou na novou pracovn&iacute; plochu, ale &#269;&aacute;st se zpracov&aacute;vanou &uacute;lohou se nezm&#283;n&iacute;. Nap&#345;&iacute;klad m&#367;&#382;ete za&#269;&iacute;t kreslit 2D tvary na Kreslic&iacute; pracovn&iacute; plo&scaron;e a pak na nich d&aacute;le pracovat v pracovn&iacute; plo&scaron;e D&iacute;l.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>V&scaron;imn&#283;te si, &#382;e n&#283;kdy je pracovn&iacute; plocha odkazov&aacute;na jako "Modul". Nicm&eacute;n&#283; Pracovn&iacute; plochy a Moduly jsou odli&scaron;n&eacute; objekty. Modul je jak&eacute;koliv roz&scaron;&iacute;&#345;en&iacute; FreeCADu, zat&iacute;mco Pracovn&iacute; plocha je speci&aacute;ln&iacute; GUI (to co vid&iacute;te na obrazovce) configurace, kter&aacute; seskupuje vybran&eacute; pruhy n&aacute;stroj&#367; a menu. Obvykle ka&#382;d&yacute; modul obsahuje svou vlastn&iacute; pracovn&iacute; plochu, co&#382; je d&#367;vod ob&#269;asn&eacute; z&aacute;m&#283;ny pojm&#367; Modul a Pracovn&iacute; plocha.
 </p>
@@ -107,13 +104,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224058
+Cached time: 20260111224339
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.246 seconds
-Preprocessor visited node count: 286/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -123,18 +120,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.812      1 -total
- 31.98%    7.616      1 Template:Userdocnavi/cs
- 16.10%    3.833      2 Template:Docnav
- 12.01%    2.860      5 Template:Incode
- 11.30%    2.690      1 Template:Button
-  9.98%    2.377      1 Template:Navigation_menu_2
-  9.34%    2.224      3 Template:Version
-  7.37%    1.755      1 Template:MenuCommand
-  7.31%    1.741      2 Template:VersionMinus
+100.00%   22.964      1 -total
+ 44.17%   10.144      1 Template:Userdocnavi/cs
+ 19.28%    4.428      1 Template:Navigation_menu_2
+ 15.98%    3.669      2 Template:Docnav
+ 10.39%    2.387      3 Template:Version
+  8.38%    1.925      5 Template:Incode
+  7.59%    1.744      1 Template:Button
+  5.25%    1.205      2 Template:VersionMinus
+  4.05%    0.931      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224058 and revision id 1736685. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224338 and revision id 1736691. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
