--- a/wiki/de/FeaturePython_Custom_Properties.html
+++ b/wiki/de/FeaturePython_Custom_Properties.html
@@ -27,10 +27,8 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>Um diesem Objekt eine Eigenschaft hinzuzuf&uuml;gen, wird die lange Form von <code>addProperty</code> verwendet, wie unten gezeigt. FreeCAD trennt (die Zeichenfolge) <code>ThePropertyName</code> automatisch auf und stellt sie mit Leerzeichen (<code>The Property Name</code>) im <a href="../Property_editor.html#Ansicht-_und_Daten-Eigenschaften" class="mw-redirect" title="Property editor">Reiter Daten des Eigenschafteneditors</a> dar.
+<p>Um diesem Objekt eine Eigenschaft hinzuzuf&uuml;gen, wird die lange Form von <code>addProperty</code> verwendet, wie unten gezeigt. FreeCAD trennt (die Zeichenfolge) <code>ThePropertyName</code> automatisch auf und stellt sie mit Leerzeichen (<code>The Property Name</code>) im <a href="../index.php?title=Property_Editor/de&amp;action=edit&amp;redlink=1.html" class="new" title="Property Editor/de (page does not exist)">Reiter Daten der Eigenschaften-Ansicht</a> dar.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyBool"</span><span class="p">,</span> <span class="s2">"ThePropertyName"</span><span class="p">,</span> <span class="s2">"Subsection"</span><span class="p">,</span> <span class="s2">"Description for tooltip"</span><span class="p">)</span>
 </pre></div>
 <p><code>App::PropertyBool</code> ist die Art der Eigenschaft. Die unterschiedlichen Arten werden unten detaillierter beschrieben.
@@ -1076,13 +1074,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224211
+Cached time: 20260111224359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.271 seconds
-Real time usage: 0.772 seconds
-Preprocessor visited node count: 2841/1000000
+CPU time usage: 0.262 seconds
+Real time usage: 0.300 seconds
+Preprocessor visited node count: 2840/1000000
 Post&#8208;expand include size: 22763/2097152 bytes
 Template argument size: 35622/2097152 bytes
 Highest expansion depth: 5/100
@@ -1092,17 +1090,17 @@ Unstrip post&#8208;expand size: 154091/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  523.790      1 -total
- 92.35%  483.697     95 Template:Code
-  1.17%    6.138     42 Template:Incode
-  1.04%    5.449     43 Template:Version/de
-  0.90%    4.692      1 Template:Userdocnavi/de
-  0.84%    4.401      1 Template:TOCright
-  0.45%    2.359    234 Template:TODO
-  0.25%    1.287      1 Template:Navigation_menu_2
+100.00%   57.655      1 -total
+ 52.26%   30.132     95 Template:Code
+  7.52%    4.337      1 Template:Userdocnavi/de
+  6.47%    3.732     43 Template:Version/de
+  4.14%    2.384     42 Template:Incode
+  3.12%    1.800    234 Template:TODO
+  2.52%    1.450      1 Template:Navigation_menu_2
+  2.18%    1.259      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:173360-0!canonical and timestamp 20260111224210 and revision id 1736689. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:173360-0!canonical and timestamp 20260111224359 and revision id 1736693. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
