Updated page FeaturePython Custom Properties/de

--- a/wiki/de/FeaturePython_Custom_Properties.html
+++ b/wiki/de/FeaturePython_Custom_Properties.html
@@ -340,11 +340,8 @@
 <p><span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyLength">App::PropertyLength</span></h2>
-<div class="mw-translate-fuzzy">
 <p>Eine length-Eigenschaft. Sie kann einen positiven oder einen Null-<code>length</code>-Wert enthalten. Das Element &bdquo;Value&rdquo; der Eigenschaft verwenden, um den Wert als Flie&szlig;kommazahl zu erhalten. Der Wert ist immer in mm angegeben, wird jedoch in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> mit den Einheiten gem&auml;&szlig; den Einstellungen dargestellt. Weitere Informationen sind im Abschnitt &uuml;ber <a href="#Creating">Erstellen eines FeaturePython-Objekts und Hinzuf&uuml;gen einer Eigenschaft dazu</a> zu finden.
-</p>
-</div>
-<p><a href="#App::PropertyDistance">App::PropertyDistance</a> ist eine &auml;hnliche Eigenschaft, die auch einen negativen Wert enthalten kann.
+</p><p><a href="#App::PropertyDistance">App::PropertyDistance</a> ist eine &auml;hnliche Eigenschaft, die auch einen negativen Wert enthalten kann.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
@@ -1071,13 +1068,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224433
+Cached time: 20260111224454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.294 seconds
-Real time usage: 0.322 seconds
-Preprocessor visited node count: 2839/1000000
+CPU time usage: 0.264 seconds
+Real time usage: 0.375 seconds
+Preprocessor visited node count: 2838/1000000
 Post&#8208;expand include size: 22763/2097152 bytes
 Template argument size: 35622/2097152 bytes
 Highest expansion depth: 5/100
@@ -1087,17 +1084,17 @@ Unstrip post&#8208;expand size: 154091/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.551      1 -total
- 52.61%   37.645     95 Template:Code
-  5.40%    3.861      1 Template:Userdocnavi/de
-  5.12%    3.664     43 Template:Version/de
-  4.32%    3.094     42 Template:Incode
-  3.52%    2.521    234 Template:TODO
-  2.38%    1.702      1 Template:TOCright
-  1.99%    1.423      1 Template:Navigation_menu_2
+100.00%   55.597      1 -total
+ 55.84%   31.047     95 Template:Code
+  6.22%    3.460      1 Template:Userdocnavi/de
+  4.74%    2.637     43 Template:Version/de
+  3.99%    2.218     42 Template:Incode
+  3.36%    1.870    234 Template:TODO
+  2.32%    1.288      1 Template:Navigation_menu_2
+  2.22%    1.235      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:173360-0!canonical and timestamp 20260111224433 and revision id 1736695. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:173360-0!canonical and timestamp 20260111224454 and revision id 1736697. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
