Updated page Macro FCCircularText/de

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -457,10 +457,8 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Verf.C3.BCgbare_Parameter"></span><span class="mw-headline" id="Verf&uuml;gbare_Parameter">Verf&uuml;gbare Parameter</span></h3>
-<div class="mw-translate-fuzzy">
 <p>Bestimmte Parameter sind in den Parametern von FreeCAD verf&uuml;gbar, siehe: <b>Men&uuml; &rarr; Werkzeuge &rarr; Parameter bearbeiten</b>
 </p>
-</div>
 <ul><li>Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
@@ -986,13 +984,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111223210
+Cached time: 20260111224628
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.408 seconds
-Real time usage: 0.658 seconds
-Preprocessor visited node count: 1601/1000000
+CPU time usage: 0.391 seconds
+Real time usage: 0.572 seconds
+Preprocessor visited node count: 1600/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -1002,19 +1000,19 @@ Unstrip post&#8208;expand size: 66468/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  421.977      1 -total
-  2.70%   11.375      1 Template:Draft_Tools_navi/de
-  2.41%   10.164      1 Template:Codeextralink
-  1.49%    6.295      3 Template:ColoredText
-  1.37%    5.785      7 Template:RadioButton
-  1.28%    5.389      1 Template:Macro/de
-  1.15%    4.837     10 Template:Code
-  1.05%    4.438      2 Template:Navigation_menu_2
-  1.01%    4.276     14 Template:TRUE
-  0.87%    3.665      6 Template:SpinBox
+100.00%  361.766      1 -total
+  4.80%   17.373      1 Template:Draft_Tools_navi/de
+  2.40%    8.685      2 Template:Navigation_menu_2
+  1.95%    7.046      7 Template:RadioButton
+  1.95%    7.042     10 Template:Code
+  1.35%    4.899     10 Template:CheckBox
+  1.24%    4.488      6 Template:SpinBox
+  1.11%    4.008      1 Template:Macro/de
+  1.01%    3.659      1 Template:Userdocnavi/de
+  0.88%    3.192      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260111223209 and revision id 1736663. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260111224627 and revision id 1736709. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
