Updated page Preferences Editor/de

--- a/wiki/de/Preferences_Editor.html
+++ b/wiki/de/Preferences_Editor.html
@@ -1,6 +1,6 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Preferences Editor/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Preferences+Editor&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Preferences_Editor.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Preferences Editor (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Se&ccedil;enekler Penceresi (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de preferencias (11% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
@@ -521,7 +521,6 @@
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_Help.png&amp;filetimestamp=20240517105829&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_Help.png" decoding="async" width="400" height="259" class="mw-file-element" data-file-width="600" data-file-height="388"></a></span>
 </p><p>Auf dieser Seite kann Folgendes festgelegt werden:
 </p>
-<div class="mw-translate-fuzzy">
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
 <th style="width: 33%;">Name
@@ -535,7 +534,7 @@
 <ul><li><b>FreeCAD-Wiki (online)</b>:</li>
 <li><b>Markdown-Version (online)</b>:</li>
 <li><b>GitHub (online)</b>: Kann nicht ausgew&auml;hlt werden.</li>
-<li><b>Benutzerderfinierter Ablageort</b>: Den Pfad eingeben, unter dem sich die heruntergeladene FreeCAD-Dokumentation befindet. Um die Dokumentation herunterzuladen, das Addon <i>Offline-Dokumentation</i> aus der Liste Arbeitsbereiche im <a href="../index.php?title=Std_AddonMgr/De&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/De (page does not exist)">Addon-Manager</a> ausw&auml;hlen.</li></ul>
+<li><b>Benutzerderfinierter Ablageort</b>: Den Pfad eingeben, unter dem sich die heruntergeladene FreeCAD-Dokumentation befindet. Um die Dokumentation herunterzuladen, das Addon <i>Offline-Dokumentation</i> aus der Liste Arbeitsbereiche im <a href="../de/Std_AddonMgr.html" title="Std AddonMgr/de">Addon-Manager</a> ausw&auml;hlen.</li></ul>
 <p><b>&Uuml;bersetzungs-Suffix</b>: F&uuml;r die Optionen Wiki und Markdown kann ein <a rel="nofollow" class="external text" href="https://de.wikipedia.org/wiki/Liste_der_ISO-639-Sprachcodes">Sprachsuffix</a> angegeben werden. Man verwendet beispielsweise <code>fr</code> f&uuml;r die franz&ouml;sische &Uuml;bersetzung.
 </p>
 </td></tr>
@@ -552,7 +551,6 @@
 </td>
 <td>Gibt eine optionale benutzerdefinierte Stilvorlage an. Wird f&uuml;r das Wiki nicht verwendet.
 </td></tr></tbody></table>
-</div>
 <p><span id="Display"></span>
 </p>
 <h2><span class="mw-headline" id="Anzeige">Anzeige</span></h2>
@@ -1296,35 +1294,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210148
+Cached time: 20260111224948
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.247 seconds
-Real time usage: 0.363 seconds
-Preprocessor visited node count: 2444/1000000
+CPU time usage: 0.209 seconds
+Real time usage: 0.313 seconds
+Preprocessor visited node count: 2443/1000000
 Post&#8208;expand include size: 26709/2097152 bytes
 Template argument size: 9813/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4099/5000000 bytes
+Unstrip post&#8208;expand size: 4103/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.110      1 -total
- 12.27%    9.215      3 Template:PropertyView/de
- 11.90%    8.937    226 Template:MenuCommand
- 11.89%    8.933     11 Template:Value
-  8.78%    6.594      1 Template:Userdocnavi/de
-  6.21%    4.662     11 Template:Incode
-  5.20%    3.908      3 Template:Variable
-  4.77%    3.582     39 Template:Version/de
-  4.51%    3.391     15 Template:FileName
-  3.95%    2.964      2 Template:Docnav/de
+100.00%   61.713      1 -total
+ 14.13%    8.722    226 Template:MenuCommand
+ 11.22%    6.927      3 Template:PropertyView/de
+  7.79%    4.804     39 Template:Version/de
+  6.75%    4.168      1 Template:Userdocnavi/de
+  6.49%    4.008      2 Template:Docnav/de
+  6.11%    3.769     11 Template:Value
+  4.57%    2.823      3 Template:Variable
+  3.90%    2.407      7 Template:KEY
+  3.66%    2.258     15 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1275-0!canonical and timestamp 20260111210148 and revision id 1736299. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1275-0!canonical and timestamp 20260111224948 and revision id 1736713. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
